Final commit trabajo final compiladores

--- a/Trabajo_Final_Compiladores.ipynb
+++ b/Trabajo_Final_Compiladores.ipynb
@@ -135,7 +135,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Gets the non terminal and terminal tokens:"
+        "2) Obtener los tokens terminales y no terminales:"
       ],
       "metadata": {
         "id": "GDBonQKSaI8D"
@@ -201,7 +201,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Getting a list of first tokens by implementing the algorithm:"
+        "3) Obtener una lista de los \"primeros\" tokens implementando el algoritma especificado:"
       ],
       "metadata": {
         "id": "MGsdMWqjameU"
@@ -266,7 +266,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Getting a list of Follows tokens by implementing the algorithm:"
+        "4) Obtener una lista de tokens de \"siguientes\" implementando el algoritmo: "
       ],
       "metadata": {
         "id": "HH9XprlQ4Uoy"
@@ -378,7 +378,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Creating the Parse Table"
+        "5) Crear la tabla de Parse"
       ],
       "metadata": {
         "id": "hNIBMgVspLdF"
@@ -527,6 +527,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "6) Crear la tabla de derivaciones."
+      ],
+      "metadata": {
+        "id": "BR77vH5EAv30"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def getRowParse(TOKEN, PARSE_TABLE):\n",
@@ -636,7 +645,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Generate Parse Tree"
+        "7) Generar el arból:"
       ],
       "metadata": {
         "id": "XSKzCM6hnDNG"
