Final commit trabajo final compiladores

--- a/Trabajo_Final_Compiladores.ipynb
+++ b/Trabajo_Final_Compiladores.ipynb
@@ -476,7 +476,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Get input to generate parse tree"
+        "6) Obterner el input para evaluar con el arbol de parsing"
       ],
       "metadata": {
         "id": "WD93e4btkMCi"
@@ -496,7 +496,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Generate the output table.\n"
+        "7) Instalar las librerias necesarias"
       ],
       "metadata": {
         "id": "mx74MlKL-fNH"
@@ -529,7 +529,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "6) Crear la tabla de derivaciones."
+        "8) Crear la tabla de derivaciones."
       ],
       "metadata": {
         "id": "BR77vH5EAv30"
@@ -645,7 +645,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "7) Generar el arból:"
+        "9) Generar el arból:"
       ],
       "metadata": {
         "id": "XSKzCM6hnDNG"
